Content not painted when scrolling an overflow node inside an iframe https://bugs.webkit.org/show_bug.cgi?id=179315 rdar://problem/35364166

Reviewed by Tim Horton.

Source/WebCore:

When scrolling overflow:scroll, we need to check for overlap updates just as we do
for page scrolls.

Test: compositing/ios/overflow-scroll-update-overlap.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::updateCompositingLayers):

LayoutTests:

* compositing/ios/overflow-scroll-update-overlap-expected.html: Added.
* compositing/ios/overflow-scroll-update-overlap.html: Added.


Canonical link: https://commits.webkit.org/195517@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224618 268f45cc-cd09-0410-ab3c-d52691b4dbfc